{
    "name": "PlayerInput",
    "maps": [
        {
            "name": "Player",
            "id": "3d48b154-82f6-45f3-82d3-4db0a53964bf",
            "actions": [
                {
                    "name": "RallyAll",
                    "type": "Button",
                    "id": "0c946999-8090-4b08-ae40-782ac046d276",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "RallyMelee",
                    "type": "Button",
                    "id": "0d25bf9f-29a0-4a92-a34a-d748863e0351",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "RallyRanged",
                    "type": "Button",
                    "id": "39636fc5-39ed-4dba-8db3-74adbb3bdb38",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "AttackAll",
                    "type": "Button",
                    "id": "cbf3e003-0f03-49ef-a723-e807812172e6",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Stop",
                    "type": "Button",
                    "id": "f7877fa0-0ea4-436b-b9e5-7b1b8c898f62",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "AttackRanged",
                    "type": "Button",
                    "id": "d3d89fa8-c6bd-4ecd-a1a8-b1e81b500951",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "SoloMode",
                    "type": "Button",
                    "id": "3041c2ff-d5b8-4db9-a172-d337777e27d7",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "AggressiveOn",
                    "type": "Button",
                    "id": "57cb654b-5a4c-4e6d-b442-ebe4a2662244",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "AggressiveOff",
                    "type": "Button",
                    "id": "15e1933a-485c-42af-aaa4-346cff7fa489",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Zoom",
                    "type": "Value",
                    "id": "99939ea0-0d00-4050-a516-399d5fd0d08f",
                    "expectedControlType": "Axis",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "Pause",
                    "type": "Button",
                    "id": "bb3e4178-2469-4e57-a40a-62d698263518",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "ActionMenu",
                    "type": "Button",
                    "id": "9114a56a-9b4e-43d0-9317-6b97b74c83a7",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "ShowHealthBar",
                    "type": "Button",
                    "id": "467b167d-9289-49c5-b54c-f7b9e6482837",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "27e8ae23-0b52-4c5b-b223-de87ddb5cab6",
                    "path": "<Keyboard>/1",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "RallyAll",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "0ba41884-e4d0-4816-9b1d-66a0b9ce095b",
                    "path": "<Keyboard>/2",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "RallyMelee",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "c06e2846-d8d9-4457-b385-52b285039d98",
                    "path": "<Keyboard>/3",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "RallyRanged",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "072fe301-2212-4ef5-8482-309a4c857828",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "AttackAll",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "e90349df-07c7-4e7a-99cf-f0008f6b58b2",
                    "path": "<Keyboard>/s",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Stop",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "aa8b0f9a-ddbe-4220-b130-80b81aca9e37",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "AttackRanged",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "b2365cc5-b8aa-4e98-864e-bcf1a5b34818",
                    "path": "<Keyboard>/tab",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "SoloMode",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "d06aa960-564c-474d-bcc7-f35c5c6c0c5e",
                    "path": "<Keyboard>/r",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "AggressiveOn",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "Shift R",
                    "id": "30896fbd-eb95-4b20-8c45-70e49ddf01a4",
                    "path": "OneModifier",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "AggressiveOff",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "modifier",
                    "id": "ea5dc296-c558-440e-b2f3-9467642efe3c",
                    "path": "<Keyboard>/shift",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "AggressiveOff",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "binding",
                    "id": "a71b93c4-efb9-48a6-8486-78772a6f8bc8",
                    "path": "<Keyboard>/r",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "AggressiveOff",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "",
                    "id": "8628c3e2-496e-42dd-95d4-bafa96a68c30",
                    "path": "<Mouse>/scroll/y",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Zoom",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "081a2c2d-497b-4fb9-b046-e2d8b6017a86",
                    "path": "<Keyboard>/escape",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Pause",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "5f88c1fc-dcf9-4fb0-a292-fd89a14b9b69",
                    "path": "<Keyboard>/ctrl",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "ActionMenu",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "4e1df798-27f5-4938-a760-12f2361a0dda",
                    "path": "<Keyboard>/alt",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "ShowHealthBar",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}